[artf576968][artf572740]Environment cannot be remove after created new environment and Alignment issue in report page for surefire report issue fixed

--- a/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
+++ b/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
@@ -4073,6 +4073,10 @@ div.submit_input {
     line-height: 25px;
 }
 
+#reportList {
+	 padding-left:5%;
+}
+
 .closereg_empty {
     width:100%;
     float:left;
